--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.personal</groupId>
-    <artifactId>conferencing</artifactId>
+    <artifactId>meetup</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -16,7 +16,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <demo.port>8443</demo.port>
-        <start-class>com.personal.conferencing.ConferencingApp</start-class>
+        <start-class>com.personal.meetup.MeetupApp</start-class>
     </properties>
 
     <dependencies>
